# FormArith

./: .gitignore  FormArith.opam  LICENSE  README.md  _CoqProject  dune-project  flake.nix
.github/workflows/: build.yml
src/: Lifts.v  NatDed.v
theories/: Base.v  Deduction.v  Definitions.v  Lambda.v  Lifts.v  NatDed.v  dune  fol.v
theories/FirstOrderLogic/: Deduction.v  Definitions.v  Lifts.v  SystemT.v  dune
theories/SimplyTypedLambdaCalculus/: ChurchRosser.v  Definitions.v  Lambda.v  StrongNormalisation.v  Term.v  Typing.v  dune
